# gnn-recruitment

./: .gitignore  pyproject.toml  readme.md
experiments/: 001-gin-on-HRSLLM.ipynb  001-gin.ipynb  002-sage-on-HRSLLM.ipynb  002-sage.ipynb  003-gat-on-HRSLLM.ipynb  003-gat.ipynb  004-rgnn-on-HRSLLM.ipynb  004-rgnn.ipynb  005-cgnn.ipynb
experiments/checkpoint copy/: epoch=10-step=1727.ckpt  epoch=11-step=1884.ckpt  epoch=14-step=2355.ckpt  epoch=16-step=2669.ckpt  epoch=19-step=3140.ckpt  epoch=9-step=1570.ckpt
gnnr/: __main__.py
gnnr/scripts/: __init__.py  dataset_generation.py
