[project]
name = "gnnr"
version = "0.1.0"
description = "Add your description here"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.1.0",
    "lightning>=2.4.0",
    "polars>=1.15.0",
    "rich>=13.9.4",
    "scikit-learn>=1.5.2",
    "sentence-transformers>=3.3.1",
    "torch-geometric>=2.6.1",
    "wandb>=0.18.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff>=0.8.0"]
jupyter = ["tqdm>=4.67.1"]

[project.optional-dependencies]
cli = ["rich>=13.9.4", "typer>=0.13.1"]
jupyter = ["jupyter>=1.1.1"]

[tool.ruff]
exclude = [".mypy_cache", ".ruff_cache", ".venv", "venv", "build", "dist"]
include = ["pyproject.toml", "**/*.py", "**/*.ipynb"]
line-length = 128
indent-width = 4
target-version = "py311"
fix = true

[tool.ruff.format]
preview = true

[tool.ruff.lint]
select = ["E", "F", "Q", "B", "I", "UP", "C"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pycodestyle]
max-line-length = 128

[tool.ruff.lint.isort]
case-sensitive = true
force-single-line = false
